Update the page titles

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/frontend/application-ca5d4ae0988acb171384353ba545cbd54cc854e3d1e7d76c0c749e07e6f5b3d0.css">
     <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/frontend/print-a5fcf9e8af736dc1f535e6d1540ea68c78559acf1ef23403f989e714d265226b.css">
 
-    <title>Chwiliwch am dystysgrif ynni – Chwiliwch am dystysgrif ynni – GOV.UK</title>
+    <title>Dod o hyd i Dystysgrif Ynni – Dod o hyd i Dystysgrif Ynni – GOV.UK</title>
 </head>
 
 <body class="govuk-template__body">
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="govuk-header__content">
-            <a href="chwiliwch-am-dystysgrif-ynni.html" class="govuk-header__link govuk-header__link--service-name">Chwiliwch am dystysgrif ynni</a>
+            <a href="chwiliwch-am-dystysgrif-ynni.html" class="govuk-header__link govuk-header__link--service-name">Dod o hyd i Dystysgrif Ynni</a>
         </div>
     </div>
 </header>
