--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -21,12 +21,12 @@
     <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/frontend/application-ca5d4ae0988acb171384353ba545cbd54cc854e3d1e7d76c0c749e07e6f5b3d0.css">
     <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/frontend/print-a5fcf9e8af736dc1f535e6d1540ea68c78559acf1ef23403f989e714d265226b.css">
 
-    <title>Sicrhau tystysgrif ynni newydd – Sicrhau tystysgrif ynni newydd – GOV.UK</title>
+    <title>Cael tystysgrif ynni newydd – Cael tystysgrif ynni newydd – GOV.UK</title>
 </head>
 
 <body class="govuk-template__body">
 
-<a href="#main-content" class="govuk-skip-link">Sgipiwch i’r prif gynnwys</a>
+<a href="#main-content" class="govuk-skip-link">Cael tystysgrif ynni newydd</a>
 
 <header class="govuk-header govuk-!-display-none-print" role="banner" data-module="header">
     <div class="govuk-header__container govuk-width-container">
