--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/frontend/application-ca5d4ae0988acb171384353ba545cbd54cc854e3d1e7d76c0c749e07e6f5b3d0.css">
   <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/frontend/print-a5fcf9e8af736dc1f535e6d1540ea68c78559acf1ef23403f989e714d265226b.css">
 
-  <title>Getting a new energy certificate – Getting a new energy certificate – GOV.UK</title>
+  <title>Get a new energy certificate – Get a new energy certificate – GOV.UK</title>
 
 </head>
 
@@ -48,7 +48,7 @@
       </a>
     </div>
     <div class="govuk-header__content">
-      <a href="getting-a-new-energy-certificate.html" class="govuk-header__link govuk-header__link--service-name">Getting a new energy certificate</a>
+      <a href="getting-a-new-energy-certificate.html" class="govuk-header__link govuk-header__link--service-name">Get a new energy certificate</a>
     </div>
   </div>
 </header>
