--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -26,7 +26,7 @@
 
 <body class="govuk-template__body">
 
-<a href="#main-content" class="govuk-skip-link">Cael tystysgrif ynni newydd</a>
+<a href="#main-content" class="govuk-skip-link">Sgipiwch i’r prif gynnwys</a>
 
 <header class="govuk-header govuk-!-display-none-print" role="banner" data-module="header">
     <div class="govuk-header__container govuk-width-container">
