add phase banner component to reflect environment, to be consistent with non-static pages

--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -53,6 +53,15 @@
 </header>
 
 <div class="govuk-width-container">
+  <div class="govuk-phase-banner">
+    <p class="govuk-phase-banner__content">
+      <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">integration</strong>
+      <span class="govuk-phase-banner__text">
+    This is a non-production environment.
+      </span>
+    </p>
+  </div>
+
   <main id="content" role="main" class=" govuk-main-wrapper">
       <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
