--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -52,6 +52,18 @@
 </header>
 
 <div class="govuk-width-container">
+    <div class="govuk-width-container">
+        <div class="govuk-phase-banner">
+            <p class="govuk-phase-banner__content">
+                <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">integration</strong>
+                <span class="govuk-phase-banner__text">
+    This is a non-production environment.
+      </span>
+            </p>
+        </div>
+
+
+
     <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
@@ -110,7 +122,7 @@
                             </div>
                             <p id="get-started" class="get-started group">
 
-                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property?lang=cy">
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.centraldatastore.net/find-a-certificate/type-of-property?lang=cy">
                                         Dechrau nawr
                                         
                                     <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
@@ -181,12 +193,12 @@
                 <h2 class="govuk-visually-hidden">Dolenni cymorth</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/accessibility-statement?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.centraldatastore.net/accessibility-statement?lang=cy">
                             Datganiad ar hygyrchedd
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/cookies?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.centraldatastore.net/cookies?lang=cy">
                             Cwcis ar ein gwasanaeth ni
                         </a>
                     </li>
