--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -54,6 +54,17 @@
 </header>
 
 <div class="govuk-width-container">
+    <div class="govuk-width-container">
+        <div class="govuk-phase-banner">
+            <p class="govuk-phase-banner__content">
+                <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">integration</strong>
+                <span class="govuk-phase-banner__text">
+    This is a non-production environment.
+      </span>
+            </p>
+        </div>
+
+
   <main id="content" role="main" class=" govuk-main-wrapper">
       <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
@@ -120,7 +131,8 @@
                           </div>
                           <p id="get-started" class="get-started group">
 
-                              <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/find-an-assessor/type-of-property">
+                              <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false"
+                                 href="https://getting-new-energy-certificate-integration.centraldatastore.net/find-an-assessor/type-of-property">
                                     Start now
                                     
                                   <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
@@ -251,12 +263,12 @@
         <h2 class="govuk-visually-hidden">Support links</h2>
         <ul class="govuk-footer__inline-list">
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/accessibility-statement">
+            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.centraldatastore.net/accessibility-statement">
               Accessibility statement
             </a>
           </li>
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/cookies">
+            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.centraldatastore.net/cookies">
               Cookies on our service
             </a>
           </li>
