--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -111,7 +111,7 @@
                           </div>
                           <p id="get-started" class="get-started group">
 
-                              <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property">
+                              <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-staging.centraldatastore.net/find-a-certificate/type-of-property">
                                     Start now
                                     
                                   <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
