added banner to find page

--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -53,6 +53,16 @@
 </header>
 
 <div class="govuk-width-container">
+    <div class="govuk-phase-banner">
+        <p class="govuk-phase-banner__content">
+            <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
+            <span class="govuk-phase-banner__text">
+    This is a non-production environment.
+      </span>
+        </p>
+    </div>
+
+
   <main id="content" role="main" class=" govuk-main-wrapper">
       <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
@@ -235,12 +245,12 @@
         <h2 class="govuk-visually-hidden">Support links</h2>
         <ul class="govuk-footer__inline-list">
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/accessibility-statement">
+            <a class="govuk-footer__link" href="https://find-energy-certificate-staging.centraldatastore.net/accessibility-statement">
               Accessibility statement
             </a>
           </li>
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/cookies">
+            <a class="govuk-footer__link" href="https://find-energy-certificate-staging.centraldatastore.net/cookies">
               Cookies on our service
             </a>
           </li>
