--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -7,18 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex, nofollow">
 
-    <link rel="stylesheet" media="all" href="https://www.gov.uk/assets/static/application-57df4706b850651634b0d347c8b15505c4fef4ec87c5fdf2af612b080b722183.css">
-    <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/static/print-70fca7a30ab8453f6af651de805828b92829dd636aca9c571ee04842b3c19a19.css">
-    <link rel="stylesheet" media="all" href="./assets/govuk.css">
-    <link rel="shortcut icon" href="https://www.gov.uk/assets/static/favicon-8d811b8c3badbc0b0e2f6e25d3660a96cc0cca7993e6f32e98785f205fc40907.ico" type="image/x-icon">
-    <link rel="mask-icon" href="https://www.gov.uk/assets/static/govuk-mask-icon-de738c3fcce8ce2a91b67e89787090dc24a5cda0275ab6b75f6226c5b9619d3d.svg" color="#0b0c0c">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.gov.uk/assets/static/govuk-apple-touch-icon-180x180-ea1cbb1cbbeddfff275dfa6e8e46b84cd530892df79dc4882a8f99b802b49a90.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="https://www.gov.uk/assets/static/govuk-apple-touch-icon-167x167-181e404a50c572923285fb83f0fbd78da6b4e38e3ce52f8e6b8e29da8586450a.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://www.gov.uk/assets/static/govuk-apple-touch-icon-152x152-02457fcdcee8d309276305af2233d41bfb8fd055e855727d355e61bce7ffa9bb.png">
-    <link rel="apple-touch-icon" href="https://www.gov.uk/assets/static/govuk-apple-touch-icon-a318f305290c523aed80082456175b46c95350c0eeac93f42e78a71c7a55544e.png">
-
-    <link rel="stylesheet" media="screen" href="https://www.gov.uk/assets/frontend/application-ca5d4ae0988acb171384353ba545cbd54cc854e3d1e7d76c0c749e07e6f5b3d0.css">
-    <link rel="stylesheet" media="print" href="https://www.gov.uk/assets/frontend/print-a5fcf9e8af736dc1f535e6d1540ea68c78559acf1ef23403f989e714d265226b.css">
+    <link rel="stylesheet" href="/assets/css/application.css" media="all">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="mask-icon" href="/assets/icons/govuk-mask-icon.svg" color="#0b0c0c">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/govuk-apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="/assets/icons/govuk-apple-touch-icon-167x167.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/govuk-apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" href="/assets/icons/govuk-apple-touch-icon.png">
+    <link rel="stylesheet" href="/assets/css/govspeak.css">
+    <link rel="stylesheet" href="/assets/css/contextual-sidebar.css">
+    <link rel="stylesheet" href="/assets/css/related-navigation.css">
 
     <title>Cael tystysgrif ynni newydd – Cael tystysgrif ynni newydd – GOV.UK</title>
 </head>
