Updated URLs to digital.communities.gov.uk

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -119,7 +119,7 @@
                             </div>
                             <p id="get-started" class="get-started group">
 
-                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.centraldatastore.net/find-a-certificate/type-of-property?lang=cy">
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-integration.digital.communities.gov.uk/find-a-certificate/type-of-property?lang=cy">
                                         Dechrau nawr
                                         
                                     <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
@@ -190,12 +190,12 @@
                 <h2 class="govuk-visually-hidden">Dolenni cymorth</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.centraldatastore.net/accessibility-statement?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/accessibility-statement?lang=cy">
                             Datganiad ar hygyrchedd
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.centraldatastore.net/cookies?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-integration.digital.communities.gov.uk/cookies?lang=cy">
                             Cwcis ar ein gwasanaeth ni
                         </a>
                     </li>
