--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -129,7 +129,7 @@
                           <p id="get-started" class="get-started group">
 
                               <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false"
-                                 href="https://getting-new-energy-certificate-integration.centraldatastore.net/find-an-assessor/type-of-property">
+                                 href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/find-an-assessor/type-of-property">
                                     Start now
                                     
                                   <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
@@ -260,12 +260,12 @@
         <h2 class="govuk-visually-hidden">Support links</h2>
         <ul class="govuk-footer__inline-list">
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.centraldatastore.net/accessibility-statement">
+            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/accessibility-statement">
               Accessibility statement
             </a>
           </li>
           <li class="govuk-footer__inline-list-item">
-            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.centraldatastore.net/cookies">
+            <a class="govuk-footer__link" href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk/cookies">
               Cookies on our service
             </a>
           </li>
