--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -52,7 +52,7 @@
 <div class="govuk-width-container">
   <div class="govuk-phase-banner">
     <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">integration</strong>
+      <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
       <span class="govuk-phase-banner__text">
     This is a non-production environment.
       </span>
