Update links to london.cloudapps.digital (old PaaS domain)

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -53,10 +53,11 @@
         <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
             <span class="govuk-phase-banner__text">
-        This is a non-production environment.
-            </span>
+    This is a non-production environment.
+      </span>
         </p>
     </div>
+
     <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
@@ -65,7 +66,7 @@
 
                     <h1 class="gem-c-title__text govuk-heading-xl">
                         Dod o hyd i dystysgrif ynni
-                        </h1>
+                    </h1>
                 </div>
             </div>
             <div class="article-container group govuk-grid-column-two-thirds">
@@ -80,14 +81,14 @@
                                     <p>Dod o hyd i dystysgrif ynni ar gyfer eiddo yng Nghymru, Lloegr neu Ogledd Iwerddon. Mae hyn yn cynnwys cartrefi, eiddo busnes ac adeiladau cyhoeddus.</p>
 
                                     <p>
-                                        Mae’r dudalen hon ar gael hefyd 
+                                        Mae’r dudalen hon ar gael hefyd
                                         <a href="find-an-energy-certificate.html">yn Saesneg (English)</a>
                                         .
                                     </p>
 
                                     <div role="note" aria-label="Information" class="application-notice info-notice">
                                         <p>
-                                            Mae yna wasanaeth gwahanol i 
+                                            Mae yna wasanaeth gwahanol i
                                             <a rel="external" href="https://www.scottishepcregister.org.uk/">ddod o hyd i dystysgrif ynni ar gyfer eiddo yn yr Alban</a>
                                             .
                                         </p>
@@ -103,7 +104,7 @@
 
                                     <div role="note" aria-label="Information" class="application-notice info-notice">
                                         <p>
-                                            Os nad oes gan eich eiddo dystysgrif ynni neu os yw wedi dod i ben, gallwch 
+                                            Os nad oes gan eich eiddo dystysgrif ynni neu os yw wedi dod i ben, gallwch
                                             <a href="sicrhau-tystysgrif-ynni-newydd.html">gael tystysgrif ynni newydd</a>
                                             .
                                         </p>
@@ -115,9 +116,9 @@
                             </div>
                             <p id="get-started" class="get-started group">
 
-                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-staging.london.cloudapps.digital/find-a-certificate/type-of-property?lang=cy">
-                                        Dechrau nawr
-                                        
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://find-energy-certificate-staging.digital.communities.gov.uk/find-a-certificate/type-of-property?lang=cy">
+                                    Dechrau nawr
+
                                     <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
                                         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
                                     </svg>
@@ -186,12 +187,12 @@
                 <h2 class="govuk-visually-hidden">Dolenni cymorth</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-staging.london.cloudapps.digital/accessibility-statement?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-staging.digital.communities.gov.uk/accessibility-statement?lang=cy">
                             Datganiad ar hygyrchedd
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://find-energy-certificate-staging.london.cloudapps.digital/cookies?lang=cy">
+                        <a class="govuk-footer__link" href="https://find-energy-certificate-staging.digital.communities.gov.uk/cookies?lang=cy">
                             Cwcis ar ein gwasanaeth ni
                         </a>
                     </li>
