--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -49,12 +49,14 @@
 <div class="govuk-width-container">
     <div class="govuk-phase-banner">
         <p class="govuk-phase-banner__content">
-          <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
-          <span class="govuk-phase-banner__text">
-        This is a non-production environment.
-          </span>
+            <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
+            <span class="govuk-phase-banner__text">
+    This is a non-production environment.
+      </span>
         </p>
     </div>
+
+
 
     <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
         <div class="govuk-grid-row">
@@ -64,7 +66,7 @@
 
                     <h1 class="gem-c-title__text govuk-heading-xl">
                         Cael tystysgrif ynni newydd
-                        </h1>
+                    </h1>
                 </div>
             </div>
             <div class="article-container group govuk-grid-column-two-thirds">
@@ -80,7 +82,7 @@
 
                                     <div role="note" aria-label="Information" class="application-notice info-notice">
                                         <p>
-                                            Mae’r dudalen hon ar gael hefyd 
+                                            Mae’r dudalen hon ar gael hefyd
                                             <a href="getting-a-new-energy-certificate.html">yn Saesneg (English)</a>
                                             .
                                         </p>
@@ -106,7 +108,7 @@
 
                                     <div role="note" aria-label="Information" class="application-notice info-notice">
                                         <p>
-                                            Mae yna broses wahanol os ydych am 
+                                            Mae yna broses wahanol os ydych am
                                             <a rel="external" href="https://www.scottishepcregister.org.uk">ddod o hyd i asesydd achrededig yn yr Alban</a>
                                             .
                                         </p>
@@ -123,9 +125,9 @@
                             </div>
                             <p id="get-started" class="get-started group">
 
-                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://getting-new-energy-certificate-staging.london.cloudapps.digital/find-an-assessor/type-of-property?lang=cy">
-                                        Dechrau nawr
-                                        
+                                <a class="gem-c-button govuk-button govuk-button--start gem-c-button--bottom-margin" role="button" rel="external" draggable="false" href="https://getting-new-energy-certificate-staging.digital.communities.gov.uk/find-an-assessor/type-of-property?lang=cy">
+                                    Dechrau nawr
+
                                     <svg class="govuk-button__start-icon govuk-!-display-none-print" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
                                         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
                                     </svg>
@@ -142,7 +144,7 @@
                                 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
                                     <p>
-                                        Gallwch 
+                                        Gallwch
                                         <a href="chwiliwch-am-dystysgrif-ynni.html">wirio a oes gan yr eiddo dystysgrif ynni ddilys eisoes</a>
                                         .
                                     </p>
@@ -204,12 +206,12 @@
                 <h2 class="govuk-visually-hidden">Dolenni cymorth</h2>
                 <ul class="govuk-footer__inline-list">
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://getting-new-energy-certificate-staging.london.cloudapps.digital/accessibility-statement?lang=cy">
+                        <a class="govuk-footer__link" href="https://getting-new-energy-certificate-staging.digital.communities.gov.uk/accessibility-statement?lang=cy">
                             Datganiad ar hygyrchedd
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://getting-new-energy-certificate-staging.london.cloudapps.digital/cookies?lang=cy">
+                        <a class="govuk-footer__link" href="https://getting-new-energy-certificate-staging.digital.communities.gov.uk/cookies?lang=cy">
                             Cwcis ar ein gwasanaeth ni
                         </a>
                     </li>
