EPBR-364 Adding the source for the static error pages, and reorganising the repo to be used for both.

--- a/static-start-pages/index.html
+++ b/static-start-pages/index.html
@@ -57,10 +57,10 @@
         The service start pages moved from our codebase to GOV.UK's main content managed by GDS.
         We use the pages below to test the full journey in pre-production environments.
         <ul class="govuk-list">
-          <li><a class="govuk-link" href="./find-an-energy-certificate.html">Find an energy certificate</a></li>
-          <li><a class="govuk-link" href="./getting-a-new-energy-certificate.html">Getting a new energy certificate</a></li>
-          <li><a class="govuk-link" href="./chwiliwch-am-dystysgrif-ynni.html">Find an energy certificate (Welsh)</a></li>
-          <li><a class="govuk-link" href="./sicrhau-tystysgrif-ynni-newydd.html">Getting a new energy certificate (Welsh)</a></li>
+          <li><a class="govuk-link" href="find-an-energy-certificate.html">Find an energy certificate</a></li>
+          <li><a class="govuk-link" href="getting-a-new-energy-certificate.html">Getting a new energy certificate</a></li>
+          <li><a class="govuk-link" href="chwiliwch-am-dystysgrif-ynni.html">Find an energy certificate (Welsh)</a></li>
+          <li><a class="govuk-link" href="sicrhau-tystysgrif-ynni-newydd.html">Getting a new energy certificate (Welsh)</a></li>
         </ul>
       </p>
     </div>
