EPBR-6660 Updating support email on static error pages

--- a/static-error-pages/find/service-unavailable.html
+++ b/static-error-pages/find/service-unavailable.html
@@ -751,7 +751,7 @@
                     <div class="govuk-grid-column-two-thirds">
                         <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
                         <p class="govuk-body">Try again later.</p>
-                        <p class="govuk-body"><a class="govuk-link" href="mailto:dluhc.digital-services@levellingup.gov.uk?subject=EPB%20-%20">Contact our helpdesk</a> if you need support to find an energy certificate or report.</p>
+                        <p class="govuk-body"><a class="govuk-link" href="mailto:mhclg.digital-services@communities.gov.uk?subject=EPB%20-%20">Contact our helpdesk</a> if you need support to find an energy certificate or report.</p>
                     </div>
                 </div>
             </main>
