EPBR-6660 Updating name of department on static start pages from DLUHC to MHCLG

--- a/static-start-pages/find-an-energy-certificate.html
+++ b/static-start-pages/find-an-energy-certificate.html
@@ -128,8 +128,8 @@
                                     <h3 id="get-help-finding-an-energy-certificate">Get help finding an energy certificate</h3>
 
                                     <p>
-                                        If you need help finding an energy certificate or report, contact the Department for Levelling Up, Housing and Communities (
-                                        <abbr title="Department for Levelling Up, Housing and Communities">DLUHC</abbr>
+                                        If you need help finding an energy certificate or report, contact the Ministry of Housing, Communities and Local Government (
+                                        <abbr title="Ministry of Housing, Communities and Local Government">MHCLG</abbr>
                                         ).
                                     </p>
 
