--- a/static-start-pages/getting-a-new-energy-certificate.html
+++ b/static-start-pages/getting-a-new-energy-certificate.html
@@ -144,8 +144,8 @@
                                     <h3 id="get-help-finding-an-energy-assessor">Get help finding an energy assessor</h3>
 
                                     <p>
-                                        For help finding an assessor, contact the Department for Levelling Up, Housing and Communities (
-                                        <abbr title="Department for Levelling Up, Housing and Communities">DLUHC</abbr>
+                                        For help finding an assessor, contact the Ministry of Housing, Communities and Local Government (
+                                        <abbr title="Ministry of Housing, Communities and Local Government">MHCLG</abbr>
                                         ).
                                     </p>
 
