EPBR-6660 Updating name of department on static start pages from DLUHC to MHCLG

--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -142,7 +142,7 @@
 
                                             <h3 id="cael-help-i-ddod-o-hyd-i-asesydd-ynni">Cael help i ddod o hyd i asesydd ynni</h3>
 
-                                            <p>I gael help i ddod o hyd i asesydd, cysylltwch â’r Adran Codi’r Gwastad, Tai a Chymunedau (DLUHC).</p>
+                                            <p>I gael help i ddod o hyd i asesydd, cysylltwch â’r Weinyddiaeth Dai, Cymunedau a Llywodraeth Leol (MHCLG).</p>
 
                                             <div class="contact">
                                                 <p>
