--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -128,7 +128,7 @@
 
                                             <h3 id="cael-help-i-ddod-o-hyd-i-dystysgrif-ynni">Cael help i ddod o hyd i dystysgrif ynni</h3>
 
-                                            <p>Os oes arnoch angen help i ddod o hyd i dystysgrif neu adroddiad ynni, cysylltwch â’r Adran Codi’r Gwastad, Tai a Chymunedau (DLUHC).</p>
+                                            <p>Os oes arnoch angen help i ddod o hyd i dystysgrif neu adroddiad ynni, cysylltwch â’r Weinyddiaeth Dai, Cymunedau a Llywodraeth Leol (MHCLG).</p>
 
                                             <div class="contact">
                                                 <p>
