EPBR-6660 Updating name of department on static start pages from DLUHC to MHCLG

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -138,7 +138,7 @@
                                         dystysgrif ynni</h3>
 
                                     <p>Os oes arnoch angen help i ddod o hyd i dystysgrif neu adroddiad ynni, cysylltwch
-                                        â’r Adran Codi’r Gwastad, Tai a Chymunedau (DLUHC).</p>
+                                        â’r Weinyddiaeth Dai, Cymunedau a Llywodraeth Leol (MHCLG).</p>
 
                                     <div class="contact">
                                         <p>
