--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -42,9 +42,9 @@
             <div class="govuk-width-container">
                 <div class="govuk-phase-banner">
                     <p class="govuk-phase-banner__content">
-                        <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">integration</strong>
+                        <strong class="govuk-tag govuk-phase-banner__content__tag epbr-environment-tag">Integration</strong>
                         <span class="govuk-phase-banner__text">
-                            This is a non-production environment.
+                            This is a test site. The data is not real, and certificates not valid.
                         </span>
                     </p>
                 </div>
