--- a/static-start-pages/chwiliwch-am-dystysgrif-ynni.html
+++ b/static-start-pages/chwiliwch-am-dystysgrif-ynni.html
@@ -39,13 +39,15 @@
 </header>
 
 <div class="govuk-width-container">
-    <div class="govuk-phase-banner">
-        <p class="govuk-phase-banner__content">
-            <strong class="govuk-tag govuk-phase-banner__content__tag" style="background-color:#d53880;">staging</strong>
-            <span class="govuk-phase-banner__text">
-    This is a non-production environment.
-      </span>
-        </p>
+    <div class="govuk-width-container">
+        <div class="govuk-phase-banner">
+            <p class="govuk-phase-banner__content">
+                <strong class="govuk-tag govuk-phase-banner__content__tag epbr-environment-tag">Staging</strong>
+                <span class="govuk-phase-banner__text">
+                This is a test site. The data is not real, and certificates not valid.
+            </span>
+            </p>
+        </div>
     </div>
 
     <main id="content" role="main" class=" govuk-main-wrapper" lang="cy">
